--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,13 @@
 body{
     position: relative;
     color: white;
+    max-width: 100%;
 }
 
 
 .custom-class {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background: rgb(0,0,0);
     background: linear-gradient(146deg, rgba(0,0,0,1) 39%, rgba(12,51,98,0.9991381562390581) 100%);
     position: fixed;
