--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ body{
 
 
 .develus {
-    background: linear-gradient(90deg,#9dd4f9,#082352);
+    background: linear-gradient(90deg,#507085,#082352);
     -webkit-background-clip: text;
     color: transparent;
 }
@@ -56,7 +56,7 @@ body{
 .custom-bg {
     background: rgb(0,0,0);
     background: linear-gradient(146deg, rgba(0,0,0,1) 39%, rgba(12,51,98,0.9991381562390581) 100%);
-
+    
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -87,4 +87,303 @@ body {
     .cutom-query-1 {
         display: none;
     }
+}
+
+
+
+
+.Hero {
+    width: 100%;
+    height: 90vh;
+    position: relative;
+}
+
+.opac-time {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    background-color: black;
+    opacity: .5;
+    top: -12%;
+}
+
+.image {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    z-index: -1;
+    top: -12%;
+}
+
+
+.component {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+.component h1 {
+    font-size: 40px;
+    font-family: 'Roboto', sans-serif;
+}
+.capitalized{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-transform: capitalize;
+}
+/* .component button {
+    border: none;
+    background-color: #2f6381;
+    padding:20px 23px;
+    border-radius: 20px;
+    font-size: 19px;
+    color: white;
+    margin-top: 10px;
+    letter-spacing: 2px;
+    transition: all ease .5s;
+} */
+/* .component button:hover {
+    transform: scale(1.1);gb(28, 97, 157)
+} */
+
+.centerize{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-items: center;
+}
+
+.click-me {
+    font-size: 22px;
+    text-decoration: none;
+    padding: 20Px 33px;
+    border: 2px solid rgb(28, 97, 157);
+    margin-top: 20px;
+    border: 4px solid;
+    border-image-slice: 1;
+    border-width: 2px;
+    border-image-source: linear-gradient(to left, #1b1be2, #517bde, #0eb9db);
+    background: rgba(47, 46, 125, 0.474);
+}
+
+.social-hero-section {
+    position: absolute;
+    left: 10;
+    top: 50%;
+}
+
+.social-item-hero  {
+    color: white;
+    font-size: 24px;
+    padding: 10px;
+    background-color: #398bbb;
+    margin: 10px;
+    border-radius: 10px;
+}
+
+.capitalized-text {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.social-hero-display-data  {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
+
+.parag-hero-sec{
+    color: white;
+    font-size: 20px;
+    font-weight: 400  !important;
+    
+}
+
+@media (max-width: 600px) {
+    .capitalized {
+        font-size: 10px;
+    }
+    .social-hero-section {
+        display: none;
+    }
+    .component h1 {
+        font-size: 20px;
+    }
+}
+
+
+
+/* navbar */
+
+
+.Navbar {
+    width: 100%;
+    height: 70px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    position: relative;
+    background-color: transparent;
+    color: white;
+    z-index: 100;
+    transition: .5s ease-in-out all;
+    font-weight: 400;
+}
+
+.change-color{
+    position: fixed;
+    background-color: rgb(255, 255, 255);
+    color: white;
+    transition: .5s ease-in-out all;
+
+}
+
+.change-color ul li a {
+    color: black;
+}
+/* .Navbar img {
+    line-height: 80px;
+} */
+
+.items {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.items li, a{
+    text-decoration: none;
+    list-style-type: none;
+    padding: 0px 7px;
+    line-height: 10px;
+    color: white;
+    font-weight: 500;
+}
+
+.change-color i{
+    color: black;
+}
+
+.fa-vars {
+
+    display: none;
+    color: white;
+}
+.items-v2 {
+    display: none;
+}
+.editions {
+    position: absolute;
+    width: 150px;
+    height: 90px;
+    background-color: rgb(16, 16, 31);
+    margin: 8px 0px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
+.editions a {
+    font-size: 18px;
+    margin: 7px 0px;
+    font-weight: lighter;
+}
+.composite {
+    display: none;
+    transition: all ease-in .4s;
+}
+
+.isEdition {
+    position: relative;
+}
+.toHoverOn:hover + .composite {
+    display: block;
+}
+.isEdition:hover + .composite {
+    display: block;
+}
+.index { 
+    z-index:100 ;
+    color: white;
+}
+
+@media (max-width:600px) {
+    .items {
+        display: none;
+    }
+
+    .fa-vars {
+        display: block;
+        font-size: 40px;
+    }
+
+    .showed-sm {
+        background-color: rgba(0, 0, 0, 0.42) ;
+        width: 100%;
+        height: 100vh;
+        z-index: 100;   
+        position: fixed;
+    }
+
+    .items-v2 {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+    }
+
+    .items-v2 li {
+        margin: 30px 0px;
+        list-style-type: none;
+    }
+    .items-v2 a {
+        color: white;
+        font-size: 20px;
+    }
+
+}
+
+.styling {
+    width: 180px;
+    height: 100px;
+} 
+
+
+/*  */
+
+
+.custom-image  {
+    background-image: url("robot.jpg");
+    background-position: center;
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+}
+.box {
+    position: relative;
+}
+
+.box::before {
+    content: "";
+    background-color: #004289;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: -1%;
+    z-index: -10;
+    border-radius: 10px;
 }
