--- a/src/App.css
+++ b/src/App.css
@@ -332,7 +332,7 @@ body {
     }
 
     .showed-sm {
-        background-color: rgba(0, 0, 0, 0.42) ;
+        background-color: rgba(0, 0, 0, 0.824) ;
         width: 100%;
         height: 100vh;
         z-index: 100;   
@@ -356,6 +356,14 @@ body {
     .items-v2 a {
         color: white;
         font-size: 20px;
+    }
+    .wrapper{
+        max-width: 300px;
+        min-height: 300px;
+    }
+    .large-title {
+        font-size: 18px;
+        text-align: center;
     }
 
 }
